docs/api/qiskit/0.19/qiskit.extensions.Initialize.mdx
---
title: Initialize (v0.19)
description: API reference for qiskit.extensions.Initialize in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.extensions.Initialize
---

# Initialize

<Class id="qiskit.extensions.Initialize" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/extensions/quantum_initializer/initializer.py" signature="Initialize(params)" modifiers="class">
  Complex amplitude initialization.

  Class that implements the (complex amplitude) initialization of some flexible collection of qubit registers (assuming the qubits are in the zero state). Note that Initialize is an Instruction and not a Gate since it contains a reset instruction, which is not unitary.

  Create new initialize composite.

  params (list): vector of complex amplitudes to initialize to

  ## Attributes

  <span id="initialize-decompositions" />

  ### decompositions

  <Attribute id="qiskit.extensions.Initialize.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="initialize-definition" />

  ### definition

  <Attribute id="qiskit.extensions.Initialize.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="initialize-params" />

  ### params

  <Attribute id="qiskit.extensions.Initialize.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="initialize-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.extensions.Initialize.add_decomposition" signature="Initialize.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="initialize-assemble" />

  ### assemble

  <Function id="qiskit.extensions.Initialize.assemble" signature="Initialize.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="initialize-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.extensions.Initialize.broadcast_arguments" signature="Initialize.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="initialize-c-if" />

  ### c\_if

  <Function id="qiskit.extensions.Initialize.c_if" signature="Initialize.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="initialize-copy" />

  ### copy

  <Function id="qiskit.extensions.Initialize.copy" signature="Initialize.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="initialize-gates-to-uncompute" />

  ### gates\_to\_uncompute

  <Function id="qiskit.extensions.Initialize.gates_to_uncompute" signature="Initialize.gates_to_uncompute()">
    Call to create a circuit with gates that take the desired vector to zero.

    **Returns**

    circuit to take self.params vector to $|{00\ldots0}\rangle$

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Function>

  <span id="initialize-inverse" />

  ### inverse

  <Function id="qiskit.extensions.Initialize.inverse" signature="Initialize.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="initialize-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.extensions.Initialize.is_parameterized" signature="Initialize.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="initialize-mirror" />

  ### mirror

  <Function id="qiskit.extensions.Initialize.mirror" signature="Initialize.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="initialize-qasm" />

  ### qasm

  <Function id="qiskit.extensions.Initialize.qasm" signature="Initialize.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="initialize-repeat" />

  ### repeat

  <Function id="qiskit.extensions.Initialize.repeat" signature="Initialize.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

